After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 673056 - tcp: Fix compiling with mingw
tcp: Fix compiling with mingw
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
git master
Other Windows
: Normal normal
: 0.11.x
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-03-29 10:37 UTC by Raimo Järvi
Modified: 2012-04-02 09:27 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix compiling with mingw (1.06 KB, patch)
2012-03-29 10:38 UTC, Raimo Järvi
none Details | Review

Description Raimo Järvi 2012-03-29 10:37:04 UTC
multisocketsink doesn't compile with mingw:

gstmultisocketsink.c: In function 'gst_multi_socket_sink_handle_client_write':
gstmultisocketsink.c:658:11: error: 'socket' undeclared (first use in this function)
Comment 1 Raimo Järvi 2012-03-29 10:38:48 UTC
Created attachment 210855 [details] [review]
Fix compiling with mingw
Comment 2 Wim Taymans 2012-04-02 09:27:30 UTC
commit 086bee8c143db0cdf8b18a84f311b8d7c7e2d75f
Author: Raimo Järvi <raimo.jarvi@gmail.com>
Date:   Thu Mar 29 13:32:15 2012 +0300

    tcp: Fix compiling with mingw
    
    https://bugzilla.gnome.org/show_bug.cgi?id=673056